syntax = "proto3";

package pb;

option go_package = "./pb";

import "google/protobuf/empty.proto";

service SystemService {
  rpc Login (LoginRequest) returns(LoginResponse); //

  rpc UserInfo(UserID) returns (User); //
  rpc UserInfoByName(UserName) returns(User); //
  rpc PagingUserList(PagingUserListRequest) returns (PagingUserListResponse); //
  rpc UserTotal(Empty) returns (Total); //
  rpc AddUserAndUserRole(AddUserAndUserRoleRequest) returns(Empty);
  rpc SoftDeleteUser(SoftDeleteUserRequest)returns(Empty);
  rpc DeleteUser(UserID) returns(Empty);
  rpc ChangePassword(ChangePasswordRequest)returns(Empty);
  rpc EditUserInfo(EditUserInfoRequest) returns(Empty);

  rpc UserPageSetInfo(UserID) returns(UserPageSet); //
  rpc SetUserPageSet(SetUserPageSetRequest) returns(Empty);
  rpc GetUserMenuParams(UserID) returns (UserMenuParamsList);
  rpc AllUserMenuParams(Empty) returns (UserMenuParamsList);

  rpc GetUserRoleByUserID(UserID) returns (UserRoleList);
  rpc UpdateUserRole(UpdateUserRoleRequest) returns(Empty);

  rpc RoleInfo(RoleID) returns (Role); //
  rpc AllRoleList (Empty) returns (AllRoleListResponse); //

  rpc MenuInfo(MenuID) returns (Menu); //
  rpc AllMenuList(Empty) returns (AllMenuListResponse);
  rpc AddMenu(AddMenuRequest) returns (Empty);
  rpc EditMenu(EditMenuRequest) returns (Empty);
  rpc GetRoleMenuByRoleID(RoleID) returns (RoleMenuList);

  rpc Test(Empty) returns (Total);
}

//-------------------
//请求
//-------------------
message Empty {}

message UserID {
  uint64 ID = 1;
}

message UserName {
  string Name = 1;
}

message RoleID {
  uint64 ID = 1;
}

message MenuID {
  uint64 ID = 1;
}

message Total{
  int64 Total = 1;
}

message EditUserInfoRequest {
  uint64 ID = 1;
  string Name = 2;
  string NickName = 3;
  string Email = 4;
  string Phone = 5;
  string Department = 6;
  string Position = 7;
  string UpdateBy = 8;
}

message AddUserAndUserRoleRequest {
  User User = 1;
  repeated uint64 RoleList = 2;
}

message UpdateUserRoleRequest {
  uint64 UserID = 1;
  repeated uint64 RoleList = 2;
}

message SetUserPageSetRequest {
  uint64 UserID = 1;
  string Avatar = 2;
  string DefaultRouter = 3;
  string SideMode = 4;
  string ActiveTextColor = 5;
  string TextColor = 6;
}

message SoftDeleteUserRequest{
  uint64 UserID = 1;
  string DeleteBy = 2;
  string State = 3;
}

message ChangePasswordRequest {
  uint64 ID = 1;
  string Password = 2;
}

message AddMenuRequest{
  uint64 ParentID = 1;
  string Name = 2;
  string Path = 3;
  string Component = 4;
  string Title = 5;
  string Icon =  6;
  int64  sort = 7;
  int64 Hiddent = 8;
}

message EditMenuRequest{
  uint64 id = 1;
  uint64 ParentID = 1;
  string Name = 2;
  string Path = 3;
  string Component = 4;
  string Title = 5;
  string Icon =  6;
  int64  sort = 7;
  int64 Hiddent = 8;
}

//-------------
//请求响应
message PagingUserListRequest {
  int64 Page = 1;
  int64 PageSize = 2;
  string NameX = 3;
}

message PagingUserListResponse {
  repeated User List = 1;
}

//---------
message AllRoleListResponse {
  repeated Role List = 1;
}

message AllMenuListResponse {
  repeated Menu List = 1;
}


message UserMenuParamsList {
  repeated UserMenuParams UserMenuParams = 1;
}

message RoleMenuList {
  repeated RoleMenu Rolemenu = 1;
}

message UserRoleList {
  repeated UserRole UserRole = 1;
}
//user_menu_params模型
message UserMenuParams {
  uint64 ID = 1;
  uint64 UserID = 2;
  uint64 MenuID = 3;
  string Type = 4;
  string Key = 5;
  string Value = 6;
}
//menu模型
message Menu {
  uint64 ID = 1;
  uint64 ParentID = 2;
  string Name = 3;
  string Path = 4;
  string Component = 5;
  string Title = 6;
  string Icon =  7;
  int64  sort = 8;
  int64 Hiddent = 9;
  int64 CreateTime = 10;
  int64 UpdateTime = 11;
  int64 DeleteTime = 12;
}
//roleMenu模型
message RoleMenu {
  uint64 id = 1;
  uint64 MenuID = 2;
  uint64 RoleID = 3;
}
//userRole模型
message UserRole {
  uint64 ID = 1;
  uint64 UserID = 2;
  uint64 RoleID = 3;
}
//角色模型
message Role {
  uint64 ID = 1;
  string Role = 2;
  string Name = 3;
  string CreateBy = 4;
  int64 CreateTime = 5;
  string UpdateBy = 6;
  int64 UpdateTime = 7;
  string DeleteBy = 8;
  int64 DeleteTime = 9;
}
// 用户模型
message User {
  uint64 ID = 1;
  string Name = 2;
  string NickName = 3;
  string PassWord = 4;
  int64 UserType = 5;
  string Email = 6;
  string Phone = 7;
  string Department = 8;
  string Position = 9;
  string CreateBy = 10;
  int64 CreateTime = 11;
  string UpdateBy = 12;
  int64 UpdateTime = 13;
  string DeleteBy = 14;
  int64 DeleteTime = 15;
}
//用户页面设置模型
message UserPageSet {
  uint64 ID = 1;
  uint64 UserId = 2;
  string Avatar = 3;
  string DefaultRouter = 4;
  string SideMode = 5;
  string ActiveTextColor = 6;
  string TextColor = 7;
}

message LoginRequest {
  string Name = 1;
  string PassWord = 2;
}

message LoginResponse {
  string Token = 1;
  int64 ExporeAt = 2;
  int64 RefreshAfter = 3;
  uint64 UserId = 4;
}